--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "messenger bot nodejs witAI",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "messenger",
