--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "messenger bot nodejs witAI",
   "main": "server.js",
-  "type":"module",
+  "type":"commonjs",
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
